fix flex wrap genre

--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -37,6 +37,7 @@
 .genre-wrapper {
   display: flex;
   gap: 5px;
+  flex-wrap: wrap;
 }
 
 .genre {
